# Chatbot

./: README.md
project/: pyproject.toml
project/.content/: long_term_memory.db
project/.content/entity_memory.db/: chroma.sqlite3
project/.content/short_term_memory.db/: chroma.sqlite3
project/db/: chroma.sqlite3
project/db/3d023960-bcbd-4c25-b2b9-1a3b05f26023/: index_metadata.pickle
project/src/project/: main.py  main2.py
project/src/project/crews/assistant_crew/: assistant_crew.py
